--- a/site/pg/examples/index.html
+++ b/site/pg/examples/index.html
@@ -1,6 +1,6 @@
 
 <head>
-  <script src="https://1490415816.rsc.cdn77.org/gmetrics.js"></script>
+  <script src="https://1490415816.rsc.cdn77.org/lib/gmetrics.js"></script>
   <script>
     var _start = Date.now()
     window.ENV = '0' //- for comps, but it is also in scope for Pug for ENV logic
